<resources>
    <string name="app_name">PMSU</string>

    <string name="home">Home</string>
    <string name="create">Create post</string>
    <string name="settings">Settings</string>
    <string name="about">about</string>

    <string name="home_long">home</string>
    <string name="create_long">create post</string>
    <string name="settings_long">settings</string>
    <string name="about_long">about</string>


    <string name="gallery">Gallery</string>
    <string name="tags">Tags</string>
    <string name="no">No</string>
    <string name="sure">Sure</string>
    <string name="oops">Ooops</string>
    <string name="add_photo">Add Photo</string>
    <string name="location_disabled_message">Your Locations seems to be disabled, do you want to enable it?</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <string name="pref_sync_list">pref_sync_list</string>
    <string name="pref_sync">pref_sync</string>
    <string name="pref_radius">pref_radius</string>
    <string name="notif_on_my_comment_key">notif_on_my_comment_key</string>
    <string name="notif_on_my_review_key">notif_on_my_review_key</string>

    <string name="pref_sync_summ">pref_sync_summ</string>
    <string name="pref_sync_title">pref_sync_title</string>
    <string name="pref_syncConnectionType">pref_syncConnectionType</string>
</resources>
